--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,13 +7,26 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.example.messagezemoga.ui.home.HomeFragment"
+        android:name="com.example.messagezemoga.ui.posts.PostFragment"
         android:label="@string/title_post"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_post" >
+        <action
+            android:id="@+id/action_navigation_home_to_descripcionPostFragment"
+            app:destination="@id/descripcionPostFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"/>
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="com.example.messagezemoga.ui.dashboard.DashboardFragment"
+        android:name="com.example.messagezemoga.ui.favoritepost.FavoriteFragment"
         android:label="@string/title_favorites"
-        tools:layout="@layout/fragment_dashboard" />
+        tools:layout="@layout/fragment_favorite" />
+    <fragment
+        android:id="@+id/descripcionPostFragment"
+        android:name="com.example.messagezemoga.ui.descriptionpost.DescripcionPostFragment"
+        android:label="fragment_descripcion_post"
+        tools:layout="@layout/fragment_descripcion_post" />
 </navigation>
