--- a/app/src/main/res/menu/menu_reload_post.xml
+++ b/app/src/main/res/menu/menu_reload_post.xml
@@ -3,11 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/favPost"
+        android:id="@+id/reloadPost"
         android:orderInCategory="1"
-        android:title="@string/make_favorite_post"
+        android:title="@string/reload_post"
         app:showAsAction="always"
-        android:icon="@drawable/ic_baseline_star_outline_24"
+        android:icon="@drawable/ic_baseline_autorenew_24"
         />
 
 </menu>
